# helixtrack

./: .gitignore  CMakeLists.txt  README.md  compile_build.sh  config.h  config_tracker.yaml  config_tracker_smoke.yaml  const.h  hdf_utils.h  helixtrack.h  helixtrack_heatmaps.h  helixtrack_math.h  helixtrack_pose.h  helixtrack_tracker.h  helixtrack_types.h  main.cpp  metrics_writer.cpp  metrics_writer.h  playback_plan.cpp  playback_plan.h  rci_job_singularity.sh  recording_setup.cpp  recording_setup.h  run_helixtrack.sh  singularity.def  singularity_build.sh  stats_utils.h
